--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "compilerOptions": {
-    "target": "es2021",
+    "target": "esnext",
     "module": "esnext",
+    "moduleResolution": "bundler",
     "declaration": true,
     "removeComments": true,
     "strict": true,
@@ -16,6 +17,6 @@
     "allowSyntheticDefaultImports": true
   },
   "files": [
-	"jFSMRouter.ts"
+    "jFSMRouter.ts"
   ]
 }
