--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "type": "git",
     "url": "https://github.com/StefanoBalocco/jFSMRouter.git"
   },
-  "version": "1.0.4",
+  "version": "1.1.0",
   "keywords": [
     "hash router",
     "client-side router",
@@ -22,7 +22,7 @@
   },
   "homepage": "https://github.com/StefanoBalocco/jFSMRouter",
   "scripts": {
-    "build": "node_modules/typescript/bin/tsc && node_modules/terser/bin/terser jFSMRouter.js -o jFSMRouter.min.js -m -c --mangle-props regex=/^_/"
+    "build": "node_modules/typescript/bin/tsc && node_modules/terser/bin/terser jFSMRouter.js -o jFSMRouter.min.js -m -c --toplevel --mangle-props regex=/^_/"
   },
   "devDependencies": {
     "terser": "~5.39.0",
