--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "jfsmrouter",
   "description": "Hash router meet a finite state machine",
-  "main": "jFSMRouter.min.mjs",
+  "exports": "./jFSMRouter.min.mjs",
   "types": "jFSMRouter.d.ts",
+  "type": "module",
   "repository": {
     "type": "git",
     "url": "https://github.com/StefanoBalocco/jFSMRouter.git"
   },
-  "version": "1.1.0",
+  "version": "1.1.1",
   "keywords": [
     "hash router",
     "client-side router",
@@ -25,7 +26,7 @@
     "build": "node_modules/typescript/bin/tsc && node_modules/terser/bin/terser jFSMRouter.js -o jFSMRouter.min.js -m -c --toplevel --mangle-props regex=/^_/"
   },
   "devDependencies": {
-    "terser": "~5.39.0",
-    "typescript": "~5.8.2"
+    "terser": "~5",
+    "typescript": "~5"
   }
 }
